syntax = "proto3";

package user;

option java_multiple_files = true;

service UserService {
    rpc GetUser (GetUserRequest) returns (UserResponse);
}

message GetUserRequest {
    string user_id = 1;
}

message ListUsersRequest {
  string filter = 1;
}

message UserResponse {
    string user_id = 1;
    string name = 2;
    string email = 3;
}